welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: illegal start of simple pattern
    case if i <=60 => return 0;
         ^caughtSpeeding:5: error: '=>' expected but ';' found.
    case if i <=60 => return 0;
                              ^caughtSpeeding:6: error: illegal start of simple pattern
    case if i <=80 => return 1;
         ^caughtSpeeding:6: error: '=>' expected but ';' found.
    case if i <=80 => return 1;
                              ^caughtSpeeding:7: error: illegal start of simple pattern
    case if i >=81 => return 2;
         ^caughtSpeeding:7: error: '=>' expected but ';' found.
    case if i >=81 => return 2;
                              ^