welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday)
  	speed = speed -5
  speed match{
    case if i <=60 => return 0;
    case if i <=80 => return 1;
    case if i >=81 => return 2;
  }
}